<resources>
    <string name="app_name">Management File</string>
    <string name="title1">Add Text</string>
    <string name="field1">Nama file</string>
    <string name="save_as_private">Save as Private</string>
    <string name="save_as_public">Save as Public</string>
    <string name="click_to_view">Click to View</string>
    <string name="show_private_data">Show Private Data</string>
    <string name="show_public_data">Show Public Data</string>
    <string name="back">Back</string>
</resources>