<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/showtext"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <EditText
        android:id="@+id/inputNamaFile"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:hint="@string/field1"
        android:textAlignment="center"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showtext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveAsPrivate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_btn"
        android:text="@string/save_as_private"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="savePrivate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNamaFile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveAsPublic"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_btn"
        android:text="@string/save_as_public"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="savePublic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNamaFile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clicktoView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:background="@drawable/style_btn2"
        android:text="@string/click_to_view"
        android:textAllCaps="false"
        android:textColor="#243B55"
        android:onClick="next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNamaFile" />


</androidx.constraintlayout.widget.ConstraintLayout>