<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/showtext"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="......."
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_btn"
        android:text="@string/show_private_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="getPrivate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showtext" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_btn"
        android:text="@string/show_public_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="getPublic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showtext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:background="@drawable/style_btn2"
        android:text="@string/back"
        android:onClick="back"
        android:textAllCaps="false"
        android:textColor="#243B55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showtext" />

</androidx.constraintlayout.widget.ConstraintLayout>